<resources>
    <string name="app_name">NBU</string>
    <string name="encounter_dialog_continue_button">Continue</string>
    <string name="encounter_dialog_return_to_town_button">To Town</string>

    <string name="inventory_equipment_dialog_positive_button">OK</string>
    <string name="inventory_equipment_dialog_negative_button">UnEquip</string>

    <string name="combat_left_button_progress">Next Round</string>
    <string name="combat_right_button_progress">Skip Battle</string>
    <string name="combat_left_button_victory">Summary</string>
    <string name="combat_left_button_defeat">Quit</string>
    <string name="combat_right_button_victory">Summary</string>
    <string name="combat_right_button_defeat">Restart</string>

    <string name="summary_level_up_text">Congratulations, you leveled up!</string>
    <string name="summary_go_to_town_text">Go To Town</string>
    <string name="summary_continue_exploring_text">Continue Exploring</string>
    <string name="summary_agility_increase_text">Agility</string>
    <string name="summary_strength_increase_text">Strength</string>
    <string name="summary_speed_increase_text">Speed</string>
    <string name="summary_points_remaining_text">points to spend: %1$d</string>
    <string name="summary_gold_and_exp_earned_text">You have earned %1$d gold and %2$d experience from this encounter.</string>
    <string name="town_center_tavern_button_text">Tavern</string>
    <string name="town_center_weapon_smith_button_text">Weapon Smith</string>
    <string name="town_center_armor_smith_button_text">Armor Smith</string>
    <string name="town_center_exit_town_button_text">Adventure Out</string>
    <string name="tavern_description_text">If you wish to rest, you must pay 10 gold coins!</string>
    <string name="tavern_rest_button_text">Rest</string>
    <string name="tavern_see_stats_button_text">See stats</string>
    <string name="tavern_leave_tavern_button_text">Leave Tavern</string>
    <string name="shop_navigation_button_text">Leave Shop</string>
    <string name="equipment_title_text">Equipment</string>
    <string name="inventory_subtitle_text">Inventory</string>
    <string name="layout_stats_title_text">Stats</string>

    <string name="layout_equipment_helmet_text">Helmet: %1$s</string>
    <string name="layout_equipment_chest_text">Chest armor: %1$s</string>
    <string name="layout_equipment_arms_text">Arms: %1$s</string>
    <string name="layout_equipment_legs_text">Legs: %1$s</string>
    <string name="layout_equipment_feet_text">Feet: %1$s</string>
    <string name="layout_equipment_weapon_text">Weapon: %1$s</string>

    <string name="layout_stats_strength_text">Strength: %1$s</string>
    <string name="layout_stats_agility_text">Agility: %1$s</string>
    <string name="layout_stats_speed_text">Speed: %1$s</string>
    <string name="layout_stats_armor_text">Armor: %1$s</string>
    <string name="layout_stats_health_text">Health: %1$s/%2$s</string>
    <string name="layout_stats_damage_text">Damage: %1$s</string>
    <string name="layout_stats_current_exp_text">Exp: %1$s</string>
    <string name="layout_stats_needed_exp_text">Exp for level up: %1$s</string>
    <string name="layout_stats_current_gold_text">Gold: %1$s</string>
    <string name="main_menu_quit_button_text">Quit</string>
    <string name="main_menu_new_game_button_text">New Game</string>

    <string name="main_activity_character_health_text">%1$d/%2$d</string>
    <string name="main_menu_continue_text">Continue</string>
</resources>